# hydra-poc

./: autotest.sh  cabal.project  flake.nix  shell.nix
haddock/hydra-node/: Hydra-API-Server.html  Hydra-Chain-ZeroMQ.html  Hydra-HeadLogic.html  Hydra-Ledger-MaryTest.html  Hydra-Ledger-Mock.html  Hydra-Ledger-Simple.html  Hydra-Ledger.html  Hydra-Logging-Messages.html  Hydra-Logging-Monitoring.html  Hydra-Logging.html  Hydra-Network-BroadcastToSelf.html  Hydra-Network-Heartbeat.html  Hydra-Network-Ouroboros-Client.html  Hydra-Network-Ouroboros-Server.html  Hydra-Network-Ouroboros-Type.html  Hydra-Network-Ouroboros.html  Hydra-Network-ZeroMQ.html  Hydra-Network.html  Hydra-Node-Version.html  Hydra-Node.html  Hydra-Option.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  (+6 more)
haddock/hydra-plutus/: Hydra-Contract-OffChain.html  Hydra-Contract-OnChain.html  doc-index.html  hydra-plutus.haddock  index.html
haddock/local-cluster/: HydraNode.html  Lib.html  Logging.html  Node.html  Ports.html  doc-index.html  index.html  local-cluster.haddock
hydra-model/: hydra-model.cabal
hydra-model/src/Hydra/: Model.hs
hydra-model/test/Hydra/: ModelSpec.hs
hydra-node/: hydra-node.cabal
hydra-node/exe/: hydra-node.hs
hydra-node/exe/hydra-node/: Main.hs
hydra-node/integration/: IntegrationSpec.hs
hydra-node/src/Hydra/: DSL.hs  HydraNode.hs  Ledger.hs  Logic.hs  Node.hs
hydra-node/src/Hydra/Ledger/: MaryTest.hs
hydra-node/src/Hydra/Logic/: SimpleHead.hs
hydra-node/src/Hydra/Node/: Run.hs
hydra-node/test/Hydra/: HydraNodeSpec.hs  LedgerSpec.hs  NodeSpec.hs
hydra-node/test/Hydra/Node/: RunSpec.hs
hydra-plutus/: hydra-plutus.cabal
hydra-plutus/src/Hydra/: CommitContract.hs  Contract.hs  ContractStateMachine.hs
hydra-plutus/src/Hydra/Contract/: Types.hs
hydra-plutus/test/Hydra/: ContractStateMachineSpec.hs
local-cluster/: local-cluster.cabal
local-cluster/src/: HydraNode.hs
